# obser-analystics/docs/swagger.json
@@ -32,8 +32,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "Endpoint",
-                        "name": "endpoint",
+                        "description": "URI path",
+                        "name": "uri_path",
                         "in": "query",
                         "required": true
                     },
@@ -169,7 +169,7 @@
         },
         "/hop-detail": {
             "get": {
-                "description": "Get Hop Detail By Id",
+                "description": "Get Hop Detail",
                 "consumes": [
                     "application/json"
                 ],
@@ -179,12 +179,33 @@
                 "tags": [
                     "hop"
                 ],
-                "summary": "Get Hop Detail By Id",
+                "summary": "Get Hop Detail",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Hop Id",
-                        "name": "hop_id",
+                        "description": "Caller Service",
+                        "name": "caller_service",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Caller Operation",
+                        "name": "caller_operation",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Called Service",
+                        "name": "called_service",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Called Operation",
+                        "name": "called_operation",
                         "in": "query",
                         "required": true
                     },
@@ -318,12 +339,7 @@
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        }
+                        "schema": {}
                     },
                     "500": {
                         "description": "Internal Server Error",
@@ -786,134 +802,6 @@
                 }
             }
         },
-        "/service-detail": {
-            "get": {
-                "description": "Get Service Detail",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "service"
-                ],
-                "summary": "Get Service Detail",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Service Name",
-                        "name": "service_name",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "From",
-                        "name": "from",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "To",
-                        "name": "to",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/model.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/service-endpoint": {
-            "get": {
-                "description": "Get Service Endpoint",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "service"
-                ],
-                "summary": "Get Service Endpoint",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Service Name",
-                        "name": "service_name",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/model.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/service-list": {
-            "get": {
-                "description": "Get Svc List",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "alert"
-                ],
-                "summary": "Get Svc List",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.ServiceObject"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/model.Error"
-                        }
-                    }
-                }
-            }
-        },
         "/service-statistic": {
             "get": {
                 "description": "Service Statistic",
@@ -994,6 +882,154 @@
                 }
             }
         },
+        "/services/:service_name": {
+            "get": {
+                "description": "Get Service Detail",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "service"
+                ],
+                "summary": "Get Service Detail",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Service Name",
+                        "name": "service_name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "From",
+                        "name": "from",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "To",
+                        "name": "to",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.ServiceDetail"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/services/:service_name/endpoints": {
+            "get": {
+                "description": "Get Service Endpoint",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "service"
+                ],
+                "summary": "Get Service Endpoint",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Service Name",
+                        "name": "service_name",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/services/top-called": {
+            "get": {
+                "description": "Get Top Called Service",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "service"
+                ],
+                "summary": "Get Top Called Service",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "From",
+                        "name": "from",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "To",
+                        "name": "to",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "integer"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/top-called-api": {
             "get": {
                 "description": "Get Top Called Api",
@@ -1047,61 +1083,6 @@
                 }
             }
         },
-        "/top-called-service": {
-            "get": {
-                "description": "Get Top Called Service",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "service"
-                ],
-                "summary": "Get Top Called Service",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "From",
-                        "name": "from",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "To",
-                        "name": "to",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Limit",
-                        "name": "limit",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/model.Error"
-                        }
-                    }
-                }
-            }
-        },
         "/traces": {
             "get": {
                 "description": "Get all traces of path",
@@ -1117,7 +1098,7 @@
                 "summary": "Get all traces of path",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "Path Id",
                         "name": "path_id",
                         "in": "query",
@@ -1325,9 +1306,6 @@
                         "type": "integer"
                     }
                 },
-                "endpoint": {
-                    "type": "string"
-                },
                 "errorCount": {
                     "type": "integer"
                 },
@@ -1370,6 +1348,9 @@
                     "type": "integer"
                 },
                 "unit": {
+                    "type": "string"
+                },
+                "uripath": {
                     "type": "string"
                 }
             }
@@ -1532,12 +1513,11 @@
                 }
             }
         },
-        "model.ServiceObject": {
+        "model.ServiceDetail": {
             "type": "object",
             "properties": {
-                "serviceName": {
-                    "type": "string"
-                }
+                "http_api": {},
+                "operations": {}
             }
         },
         "model.ServiceStatisticObject": {
