# obser-analystics/internal/api/handler/handler.go
@@ -17,23 +17,23 @@ func (h *Handler) RegisterRoutes(v1 *echo.Group) {
 	v1.GET("/traces", h.getAllTracesOfPath)
 
 	v1.GET("/api-statistics", h.GetApiStatisticHandler)
-	v1.GET("/long-api", h.GetLongApiHandler)
-	v1.GET("/called-api", h.GetCalledApiHandler)
-	v1.GET("/top-called-api", h.GetTopCalledApiHandler)
+	v1.GET("/api-statistics/long", h.GetLongApiHandler)
+	v1.GET("/api-statistics/called", h.GetCalledApiHandler)
+	v1.GET("/api-statistics/top-called", h.GetTopCalledApiHandler)
 	v1.GET("/http-api", h.GetHttpApiByServiceHandler)
 
-	v1.GET("/paths", h.GetAllPathFromHopHandler)       // handle db data
-	v1.GET("/path-detail", h.GetPathDetailByIdHandler) // handle db data
+	v1.GET("/paths", h.GetAllPathFromHopHandler)          // handle db data
+	v1.GET("/paths/:path_id", h.GetPathDetailByIdHandler) // handle db data
 	v1.GET("/hop-detail", h.GetHopDetailByIdHandler)
 	v1.GET("/long-path", h.GetLongPathHandler)
 
-	v1.GET("/operations", h.GetAllOperationsFromServiceHandler)
+	v1.GET("/services/:service_name/operations", h.GetAllOperationsFromServiceHandler)
 	v1.GET("/operations-count", h.GetAllOperationsCountFromServiceHandler)
 	v1.GET("/services", h.GetAllServicesHandler)
+	v1.GET("/services/top-called", h.GetTopCalledServiceHandler)
 	v1.GET("/services/:service_name", h.GetServiceDetailHandler)
 	v1.GET("/http-service-api", h.GetHttpServiceApiHandler)
-	v1.GET("/service-endpoint", h.GetServiceEndpointHandler)
-	v1.GET("/top-called-service", h.GetTopCalledServiceHandler)
+	v1.GET("/services/:service_name/endpoints", h.GetServiceEndpointHandler)
 
 	v1.GET("/get-alert", h.GetAlertHandler)
 	v1.GET("/uri-list", h.GetUriListHandler)
