# obser-analystics/internal/api/handler/path_analystic.go
@@ -10,18 +10,18 @@ import (
 // @Tags			path
 // @Accept			json
 // @Produce		json
-// @Param			caller_service	query		string	true	"Caller Service"
-// @Param			caller_operation	query		string	true	"Caller Operation"
-// @Param			called_service	query		string	true	"Called Service"
-// @Param			called_operation	query		string	true	"Called Operation"
-// @Success		200				{object}	[]model.Path
+// @Param			caller_svc	query		string	true	"Caller Service"
+// @Param			caller_op	query		string	true	"Caller Operation"
+// @Param			called_svc	query		string	true	"Called Service"
+// @Param			called_op	query		string	true	"Called Operation"
+// @Success		200				{object}	[]model.GraphData
 // @Failure		500				{object}	model.Error
 // @Router			/paths [get]
 func (h *Handler) GetAllPathFromHopHandler(c echo.Context) error {
-	callerSvc := c.QueryParam("caller_service")
-	callerOp := c.QueryParam("caller_operation")
-	calledSvc := c.QueryParam("called_service")
-	calledOp := c.QueryParam("called_operation")
+	callerSvc := c.QueryParam("caller_svc")
+	callerOp := c.QueryParam("caller_op")
+	calledSvc := c.QueryParam("called_svc")
+	calledOp := c.QueryParam("called_op")
 
 	res, err := h.service.GetAllPathFromHop(c.Request().Context(), callerSvc, callerOp, calledSvc, calledOp)
 	if err != nil {
@@ -36,15 +36,15 @@ func (h *Handler) GetAllPathFromHopHandler(c echo.Context) error {
 // @Tags			path
 // @Accept			json
 // @Produce		json
-// @Param			path_id			query		string	true	"Path Id"
+// @Param			path_id			param		string	true	"Path Id"
 // @Param			from				query		string	true	"From"
 // @Param			to				query		string	true	"To"
 // @Param			unit				query		string	true	"Unit"
 // @Success		200				{object}	model.PathDetail
 // @Failure		500				{object}	model.Error
-// @Router			/path-detail [get]
+// @Router			/paths/:path_id [get]
 func (h *Handler) GetPathDetailByIdHandler(c echo.Context) error {
-	pathId := c.QueryParam("path_id")
+	pathId := c.Param("path_id")
 	from := c.QueryParam("from")
 	to := c.QueryParam("to")
 	unit := c.QueryParam("unit")
@@ -95,7 +95,7 @@ func (h *Handler) GetHopDetailByIdHandler(c echo.Context) error {
 // @Accept			json
 // @Produce		json
 // @Param			threshold		query		string	true	"Threshold"
-// @Success		200				{object}	[]model.Path
+// @Success		200				{object}	[]model.GraphData
 // @Failure		500				{object}	model.Error
 // @Router			/long-path [get]
 func (h *Handler) GetLongPathHandler(c echo.Context) error {
